<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bpWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:src="@drawable/yamaha" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/chassis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/chassis"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/mobile"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />



            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/alldealer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/hint_alldealer"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/repassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bpWhite"
                android:hint="@string/hint_password_retype"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/bpblack"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>