<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bpWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:src="@drawable/yamaha" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/verification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bpWhite"
            android:hint="@string/verification"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:gravity="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/bpblack"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:text="@string/btn_resend"
                android:textColor="@color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/submitVerify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_submit"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>